Fix extra space in sidebar navigation

--- a/_sass/tutorial.scss
+++ b/_sass/tutorial.scss
@@ -60,6 +60,7 @@ $color_wild_sand_approx: #f5f5f5;
 		ul {
 			list-style-type: none;
 			padding: 0 0 0 10px;
+			margin-bottom: 0;
 			a {
 				padding: 5px 0;
 				margin-bottom: 10px;
